--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,12 @@
 	font-size: 16px;
 }
 body {
-	background: #191A19;
+	background: #191a19;
 	margin: 0px;
+}
+::-webkit-scrollbar {
+	width: 5px;
+}
+::-webkit-scrollbar-thumb {
+	background: #4e9f3d;
 }
