--- a/src/styles/handwritingGenerator.scss
+++ b/src/styles/handwritingGenerator.scss
@@ -56,8 +56,8 @@
 			border: 3px solid #4e9f3d;
 			height: 35px;
 			width: 120px;
-			border-radius: 10px;
 			font-weight: bold;
+			box-shadow: 0px 0px 10px black;
 			&:hover {
 				background: transparent;
 			}
@@ -77,10 +77,12 @@
 				padding: 0.5rem;
 				transition: all 0.1s linear;
 				&:hover {
-					box-shadow: 0px 0px 5px black;
+					cursor: pointer;
+					transform: scale(1.003);
 				}
 				&:focus {
-					box-shadow: 0px 0px 30px black;
+					cursor: text;
+					box-shadow: 0px 0px 50px black;
 					border-width: 3px;
 				}
 			}
