--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,8 @@ body {
 	background: #191a19;
 	margin: 0px;
 }
-button, a, input {
+select, a, input {
+	outline: none;
 	cursor: pointer;
 }
 ::-webkit-scrollbar {
