--- a/src/styles/handwritingGenerator.scss
+++ b/src/styles/handwritingGenerator.scss
@@ -66,8 +66,9 @@
 			grid-template-rows: 70px 632px;
 		}
 		.unruled {
-			grid-template-columns: 500px;
-			grid-template-rows: 701.5px;
+			grid-template-columns: 484px;
+			grid-template-rows: 685.5px;
+			padding: 8px;
 		}
 		form {
 			height: 701.5px;
